# greenhouse_rdkx5

./: .gitignore  frames_2026-06-22_21.00.20.gv  函数接口文档.md  启动指南.md  更新日志.md  激光雷达数据协议解析手册.md  项目总览.md
src/lidar_pkg/: CMakeLists.txt  package.xml
src/lidar_pkg/config/: base_params.yaml  lidar_params.yaml  nav2_params.yaml  pest_monitor_params.yaml  slam_params.yaml
src/lidar_pkg/launch/: lidar.launch.py  monitor.launch.py  nav.launch.py  pest_monitor.launch.py  slam.launch.py
src/lidar_pkg/msg/: PestDetection.msg  PestReport.msg
src/lidar_pkg/rviz/: lidar.rviz  slam.rviz
src/lidar_pkg/scripts/: keyboard_control.py
src/lidar_pkg/src/: base_driver.cpp  lidar_node.cpp  pest_monitor.cpp
src/lidar_pkg/urdf/: lidar.urdf
